==> Samsung/TizenRT/os/arch/arm/src/stm32/stm32_adc.c <==
#include <tinyara/config.h>
#include <stdio.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <string.h>
#include <semaphore.h>
#include <errno.h>
#include <assert.h>
#include <debug.h>
#include <unistd.h>
#include <arch/board/board.h>
#include <tinyara/arch.h>
#include <tinyara/analog/adc.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "stm32.h"
#include "stm32_adc.h"
#define ADC_SR_ALLINTS (ADC_SR_AWD | ADC_SR_EOC | ADC_SR_JEOC)
#define ADC_SR_ALLINTS (ADC_SR_AWD | ADC_SR_EOC | ADC_SR_JEOC | ADC_SR_OVR)
#define ADC_CR1_ALLINTS (ADC_CR1_AWDIE | ADC_CR1_EOCIE | ADC_CR1_JEOCIE)
#define ADC_CR1_ALLINTS (ADC_CR1_AWDIE | ADC_CR1_EOCIE | ADC_CR1_JEOCIE | ADC_CR1_OVRIE)
#define ADC_MAX_SAMPLES 16
#define ADC_MAX_SAMPLES 1

static void adc_startconv(struct stm32_dev_s *priv, bool enable)
{
	uint32_t regval;

	avdbg("enable: %d\n", enable);

	regval = adc_getreg(priv, STM32_ADC_CR2_OFFSET);
	if (enable) {
		/* Start conversion of regular channles */

		regval |= ADC_CR2_SWSTART;
	} else {
		/* Disable the conversion of regular channels */

		regval &= ~ADC_CR2_SWSTART;
	}
	adc_putreg(priv, STM32_ADC_CR2_OFFSET, regval);
}

static int adc_setup(FAR struct adc_dev_s *dev)
{
	FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;
	int ret;

	/* Attach the ADC interrupt */

	ret = irq_attach(priv->irq, priv->isr, NULL);
	if (ret == OK) {
		/* Make sure that the ADC device is in the powered up, reset state */

		adc_reset(dev);

		/* Enable the ADC interrupt */

		avdbg("Enable the ADC interrupt: irq=%d\n", priv->irq);
		up_enable_irq(priv->irq);
	}

	return ret;
}

static void adc_shutdown(FAR struct adc_dev_s *dev)
{
	FAR struct stm32_dev_s *priv = (FAR struct stm32_dev_s *)dev->ad_priv;

	/* Disable ADC interrupts and detach the ADC interrupt handler */

	up_disable_irq(priv->irq);
	irq_detach(priv->irq);

	/* Disable and reset the ADC module */

	adc_rccreset(priv, true);
}

struct adc_dev_s *stm32_adcinitialize(int intf, const uint8_t *chanlist, int nchannels)
{
	FAR struct adc_dev_s *dev;
	FAR struct stm32_dev_s *priv;

	avdbg("intf: %d nchannels: %d\n", intf, nchannels);

#ifdef CONFIG_STM32_ADC1
	if (intf == 1) {
		avdbg("ADC1 Selected\n");
		dev = &g_adcdev1;
	} else
#endif
#ifdef CONFIG_STM32_ADC2
		if (intf == 2) {
			avdbg("ADC2 Selected\n");
			dev = &g_adcdev2;
		} else
#endif
#ifdef CONFIG_STM32_ADC3
			if (intf == 3) {
				avdbg("ADC3 Selected\n");
				dev = &g_adcdev3;
			} else
#endif
			{
				adbg("No ADC interface defined\n");
				return NULL;
			}

	/* Configure the selected ADC */

	priv = dev->ad_priv;

	DEBUGASSERT(nchannels <= ADC_MAX_SAMPLES);
	priv->nchannels = nchannels;

	memcpy(priv->chanlist, chanlist, nchannels);
	return dev;
}
